Version 1.2.1 - commit 2
- Context class is now a record
- Improved concurrent execution of requests (switched to AtomicInteger counter)
- Removed SLF4J logging, replaced with JDK9 Platform logging (less dependencies, more general facade)
- made lazy-style loggging to improved performance